; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_choose_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_choose_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfq_data = type { i32, i64 }
%struct.request = type { i32 }

@REQ_META = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.request* (%struct.cfq_data*, %struct.request*, %struct.request*, i64)* @cfq_choose_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.request* @cfq_choose_req(%struct.cfq_data* %0, %struct.request* %1, %struct.request* %2, i64 %3) #0 {
  %5 = alloca %struct.request*, align 8
  %6 = alloca %struct.cfq_data*, align 8
  %7 = alloca %struct.request*, align 8
  %8 = alloca %struct.request*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store %struct.cfq_data* %0, %struct.cfq_data** %6, align 8
  store %struct.request* %1, %struct.request** %7, align 8
  store %struct.request* %2, %struct.request** %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 0, i64* %12, align 8
  store i64 0, i64* %13, align 8
  store i32 0, i32* %15, align 4
  %16 = load %struct.request*, %struct.request** %7, align 8
  %17 = icmp eq %struct.request* %16, null
  br i1 %17, label %22, label %18

18:                                               ; preds = %4
  %19 = load %struct.request*, %struct.request** %7, align 8
  %20 = load %struct.request*, %struct.request** %8, align 8
  %21 = icmp eq %struct.request* %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18, %4
  %23 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %23, %struct.request** %5, align 8
  br label %179

24:                                               ; preds = %18
  %25 = load %struct.request*, %struct.request** %8, align 8
  %26 = icmp eq %struct.request* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %28, %struct.request** %5, align 8
  br label %179

29:                                               ; preds = %24
  %30 = load %struct.request*, %struct.request** %7, align 8
  %31 = call i64 @rq_is_sync(%struct.request* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %29
  %34 = load %struct.request*, %struct.request** %8, align 8
  %35 = call i64 @rq_is_sync(%struct.request* %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %39, label %37

37:                                               ; preds = %33
  %38 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %38, %struct.request** %5, align 8
  br label %179

39:                                               ; preds = %33, %29
  %40 = load %struct.request*, %struct.request** %8, align 8
  %41 = call i64 @rq_is_sync(%struct.request* %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %49

43:                                               ; preds = %39
  %44 = load %struct.request*, %struct.request** %7, align 8
  %45 = call i64 @rq_is_sync(%struct.request* %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %49, label %47

47:                                               ; preds = %43
  %48 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %48, %struct.request** %5, align 8
  br label %179

49:                                               ; preds = %43, %39
  br label %50

50:                                               ; preds = %49
  %51 = load %struct.request*, %struct.request** %7, align 8
  %52 = getelementptr inbounds %struct.request, %struct.request* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  %54 = load i32, i32* @REQ_META, align 4
  %55 = and i32 %53, %54
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %66

57:                                               ; preds = %50
  %58 = load %struct.request*, %struct.request** %8, align 8
  %59 = getelementptr inbounds %struct.request, %struct.request* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = load i32, i32* @REQ_META, align 4
  %62 = and i32 %60, %61
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %66, label %64

64:                                               ; preds = %57
  %65 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %65, %struct.request** %5, align 8
  br label %179

66:                                               ; preds = %57, %50
  %67 = load %struct.request*, %struct.request** %8, align 8
  %68 = getelementptr inbounds %struct.request, %struct.request* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = load i32, i32* @REQ_META, align 4
  %71 = and i32 %69, %70
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %82

73:                                               ; preds = %66
  %74 = load %struct.request*, %struct.request** %7, align 8
  %75 = getelementptr inbounds %struct.request, %struct.request* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 4
  %77 = load i32, i32* @REQ_META, align 4
  %78 = and i32 %76, %77
  %79 = icmp ne i32 %78, 0
  br i1 %79, label %82, label %80

80:                                               ; preds = %73
  %81 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %81, %struct.request** %5, align 8
  br label %179

82:                                               ; preds = %73, %66
  br label %83

83:                                               ; preds = %82
  %84 = load %struct.request*, %struct.request** %7, align 8
  %85 = call i64 @blk_rq_pos(%struct.request* %84)
  store i64 %85, i64* %10, align 8
  %86 = load %struct.request*, %struct.request** %8, align 8
  %87 = call i64 @blk_rq_pos(%struct.request* %86)
  store i64 %87, i64* %11, align 8
  %88 = load %struct.cfq_data*, %struct.cfq_data** %6, align 8
  %89 = getelementptr inbounds %struct.cfq_data, %struct.cfq_data* %88, i32 0, i32 0
  %90 = load i32, i32* %89, align 8
  %91 = mul nsw i32 %90, 2
  %92 = sext i32 %91 to i64
  store i64 %92, i64* %14, align 8
  %93 = load i64, i64* %10, align 8
  %94 = load i64, i64* %9, align 8
  %95 = icmp sge i64 %93, %94
  br i1 %95, label %96, label %100

96:                                               ; preds = %83
  %97 = load i64, i64* %10, align 8
  %98 = load i64, i64* %9, align 8
  %99 = sub nsw i64 %97, %98
  store i64 %99, i64* %12, align 8
  br label %118

100:                                              ; preds = %83
  %101 = load i64, i64* %10, align 8
  %102 = load i64, i64* %14, align 8
  %103 = add i64 %101, %102
  %104 = load i64, i64* %9, align 8
  %105 = icmp uge i64 %103, %104
  br i1 %105, label %106, label %114

106:                                              ; preds = %100
  %107 = load i64, i64* %9, align 8
  %108 = load i64, i64* %10, align 8
  %109 = sub nsw i64 %107, %108
  %110 = load %struct.cfq_data*, %struct.cfq_data** %6, align 8
  %111 = getelementptr inbounds %struct.cfq_data, %struct.cfq_data* %110, i32 0, i32 1
  %112 = load i64, i64* %111, align 8
  %113 = mul nsw i64 %109, %112
  store i64 %113, i64* %12, align 8
  br label %117

114:                                              ; preds = %100
  %115 = load i32, i32* %15, align 4
  %116 = or i32 %115, 1
  store i32 %116, i32* %15, align 4
  br label %117

117:                                              ; preds = %114, %106
  br label %118

118:                                              ; preds = %117, %96
  %119 = load i64, i64* %11, align 8
  %120 = load i64, i64* %9, align 8
  %121 = icmp sge i64 %119, %120
  br i1 %121, label %122, label %126

122:                                              ; preds = %118
  %123 = load i64, i64* %11, align 8
  %124 = load i64, i64* %9, align 8
  %125 = sub nsw i64 %123, %124
  store i64 %125, i64* %13, align 8
  br label %144

126:                                              ; preds = %118
  %127 = load i64, i64* %11, align 8
  %128 = load i64, i64* %14, align 8
  %129 = add i64 %127, %128
  %130 = load i64, i64* %9, align 8
  %131 = icmp uge i64 %129, %130
  br i1 %131, label %132, label %140

132:                                              ; preds = %126
  %133 = load i64, i64* %9, align 8
  %134 = load i64, i64* %11, align 8
  %135 = sub nsw i64 %133, %134
  %136 = load %struct.cfq_data*, %struct.cfq_data** %6, align 8
  %137 = getelementptr inbounds %struct.cfq_data, %struct.cfq_data* %136, i32 0, i32 1
  %138 = load i64, i64* %137, align 8
  %139 = mul nsw i64 %135, %138
  store i64 %139, i64* %13, align 8
  br label %143

140:                                              ; preds = %126
  %141 = load i32, i32* %15, align 4
  %142 = or i32 %141, 2
  store i32 %142, i32* %15, align 4
  br label %143

143:                                              ; preds = %140, %132
  br label %144

144:                                              ; preds = %143, %122
  %145 = load i32, i32* %15, align 4
  switch i32 %145, label %171 [
    i32 0, label %146
    i32 2, label %166
    i32 1, label %168
    i32 3, label %170
  ]

146:                                              ; preds = %144
  %147 = load i64, i64* %12, align 8
  %148 = load i64, i64* %13, align 8
  %149 = icmp slt i64 %147, %148
  br i1 %149, label %150, label %152

150:                                              ; preds = %146
  %151 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %151, %struct.request** %5, align 8
  br label %179

152:                                              ; preds = %146
  %153 = load i64, i64* %13, align 8
  %154 = load i64, i64* %12, align 8
  %155 = icmp slt i64 %153, %154
  br i1 %155, label %156, label %158

156:                                              ; preds = %152
  %157 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %157, %struct.request** %5, align 8
  br label %179

158:                                              ; preds = %152
  %159 = load i64, i64* %10, align 8
  %160 = load i64, i64* %11, align 8
  %161 = icmp sge i64 %159, %160
  br i1 %161, label %162, label %164

162:                                              ; preds = %158
  %163 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %163, %struct.request** %5, align 8
  br label %179

164:                                              ; preds = %158
  %165 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %165, %struct.request** %5, align 8
  br label %179

166:                                              ; preds = %144
  %167 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %167, %struct.request** %5, align 8
  br label %179

168:                                              ; preds = %144
  %169 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %169, %struct.request** %5, align 8
  br label %179

170:                                              ; preds = %144
  br label %171

171:                                              ; preds = %144, %170
  %172 = load i64, i64* %10, align 8
  %173 = load i64, i64* %11, align 8
  %174 = icmp sle i64 %172, %173
  br i1 %174, label %175, label %177

175:                                              ; preds = %171
  %176 = load %struct.request*, %struct.request** %7, align 8
  store %struct.request* %176, %struct.request** %5, align 8
  br label %179

177:                                              ; preds = %171
  %178 = load %struct.request*, %struct.request** %8, align 8
  store %struct.request* %178, %struct.request** %5, align 8
  br label %179

179:                                              ; preds = %177, %175, %168, %166, %164, %162, %156, %150, %80, %64, %47, %37, %27, %22
  %180 = load %struct.request*, %struct.request** %5, align 8
  ret %struct.request* %180
}

declare dso_local i64 @rq_is_sync(%struct.request*) #1

declare dso_local i64 @blk_rq_pos(%struct.request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
